--- a/config/double_pinyin_flypy.custom.yaml
+++ b/config/double_pinyin_flypy.custom.yaml
@@ -45,6 +45,10 @@ patch:
     option_name: emoji_suggestion
     tips: none
     inherit_comment: false
+  translator/enable_completion: true # 开启逐鍵提示
+  translator/preedit_format: {} # 输入双拼码的时候不转化为全拼码
+  translator/enable_user_dict: true         # 是否开启用户词典（记录词频，用户词）
+  translator/enable_encoder: true           # 自动造词
 __patch:
 # Rx: BlindingDark/rime-easy-en:customize:schema=double_pinyin_flypy {
   - patch/+:
