--- a/config/default.custom.yaml
+++ b/config/default.custom.yaml
@@ -1,12 +1,12 @@
 customization:
   distribution_code_name: Weasel
-  distribution_version: 0.14.3
+  distribution_version: 0.14.3_dev_0.8
   generator: "Rime::SwitcherSettings"
-  modified_time: "Sun Mar  5 09:16:04 2023"
-  rime_version: 1.5.3
+  modified_time: "Fri Mar 10 18:24:34 2023"
+  rime_version: 1.8.5
 patch:
   "menu/page_size": 7
   schema_list:
     - {schema: double_pinyin_flypy}
-    - {schema: luna_pinyin}
     - {schema: easy_en}
+    - {schema: chaizi}
