--- a/config/double_pinyin_flypy.custom.yaml
+++ b/config/double_pinyin_flypy.custom.yaml
@@ -27,13 +27,14 @@
 
 patch:
   # 載入朙月拼音擴充詞庫
-  "translator/dictionary": luna_pinyin.extended
+  translator/dictionary: luna_pinyin.extended
   engine/+:
     translators/+:
       - lua_translator@time_translator
       - lua_translator@date_translator
       - lua_translator@week_translator
       - lua_translator@lunar_translator
+      - reverse_lookup_translator
   switches/@next:
     name: emoji_suggestion
     reset: 1
@@ -45,10 +46,20 @@ patch:
     option_name: emoji_suggestion
     tips: none
     inherit_comment: false
-  translator/enable_completion: true # 开启逐鍵提示
-  translator/preedit_format: {} # 输入双拼码的时候不转化为全拼码
-  translator/enable_user_dict: true         # 是否开启用户词典（记录词频，用户词）
-  translator/enable_encoder: true           # 自动造词
+  translator/preedit_format: {}
+  schema/dependencies/+:
+    - chaizi
+  reverse_lookup:
+    dictionary: chaizi
+    enable_completion: true
+    prefix: "u"
+    tips: 〔拆字〕
+    preedit_format:
+      - xform/([nljqxy])v/$1ü/
+    comment_format:
+      - xform/([nljqxy])v/$1ü/
+  recognizer/patterns/+:
+      reverse_lookup: "u[a-z]*?$"
 __patch:
 # Rx: BlindingDark/rime-easy-en:customize:schema=double_pinyin_flypy {
   - patch/+:
